# NetzplanAPP

./: .coverage  .gitignore  LICENSE  Pipfile  README.md  app.py  bom-pipenv.json  mypy.result  netzplan.py  packages.txt  pyproject.toml  requirements.txt  requirements_dev.txt  run  setup.cfg  setup.py  tox.ini
.github/workflows/: python-app.yml
github/workflows/: test.yml
src/NetzplanAPP/: __init__.py  app.py
src/NetzplanAPP/static/file/uploads/: FisiSommerE.xlsx  Netzplan.xlsx  Netzplan_Ubung2.xlsx  Online_Shop.Test.xlsx  Projekt.xlsx
src/NetzplanAPP/templates/: netzplan.html
src/NetzplanAPP_Sebastian_Meisel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/netzplan/: __init__.py  netzplan.py
static/css/: main.css
static/file/downloads/: Projekt.xltx
templates/: base.html  index.html  netzplan.html
test/: test_APP.py
tests/: Projekt_Ohne_Projekt.xlsx  Projekt_Ohne_Ressourcen.xlsx  Projekt_Ohne_Ressourcen_X_data.xlsx  Projekt_Ohne_Ressourcen_und_ID.xlsx  Projekt_Ohne_Ressourcen_und_ID_Dauer.xlsx  Projekt_Ohne_Ressourcen_und_ID_korr.xlsx  Ressourcen_Arbeitspakete_falsch.xlsx  Ressourcen_Ohne_ID.xlsx  Ressourcen_Ohne_Nachname.xlsx  test_APP.py  test_py_only_Project.py  tox.ini
