[metadata]
name = NetzplanAPP-Sebastian-Meisel
version = 0.0.1
author = Sebastian Meisel
author_email = sebastian.meisel@gmail.com
description = Online-Tool: Netzplan zur Projektplanung 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SebastianMeisel/NetzplanAPP
project_urls =
    Bug Tracker = https://github.com/SebastianMeisel/NetzplanAPP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Framework :: Flask

[options]
packing_dir =
    =src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
